# Kips_Switch

./: .cursorrules  .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  brainstorm_email_flow.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
.agent/workflows/: implement.md  refactor.md
.github/workflows/: scheduler.yml
deadmans-switch/: Anchor.toml  package.json
deadmans-switch/migrations/: deploy.ts
deadmans-switch/programs/deadmans-switch/: Cargo.toml
deadmans-switch/programs/deadmans-switch/src/: constants.rs  errors.rs  lib.rs  state.rs
deadmans-switch/programs/deadmans-switch/src/instructions/: claim_and_close.rs  claim_sol.rs  claim_tokens.rs  close_vault.rs  initialize_vault.rs  lock_tokens.rs  mod.rs  ping.rs  set_delegate.rs  top_up_bounty.rs  trigger_release.rs  update_vault.rs
deadmans-switch/tests/: deadmans-switch.ts
docs/: ARCHITECTURE_FLOW.md  PRD.md  architecture.md  front-end-spec.md  notebooklm_pitch_context.md  project-brief.md  project-structure.md  test_strategy.md
docs/best-practices/: 01-project-structure.md  02-account-state.md  03-instructions.md  04-errors.md  05-macros-cpi.md  06-security.md  07-pda-constants.md  README.md
public/: manifest.json
scripts/: test-ai-real.ts  test-blinks.ts
src/app/: globals.css  layout.tsx  page.tsx
src/constants/: ai.ts
src/hooks/: useClaimedVaults.ts  useCreateVaultState.ts  useDemoVault.ts  useDemoVault.tsx  useEditVault.ts  useRecipientVaults.ts  (+4 more)
traction/: 00-prerequisites.md  CHECKLIST.md  TODO-hackathon.md
(+202 files in other folders)
